--- a/Packages/com.baza.ads.applovin/package.json
+++ b/Packages/com.baza.ads.applovin/package.json
@@ -5,7 +5,7 @@
   "unity": "6000.0",
   "description": "Applovin mediation",
   "dependencies": {
-    "com.baza.ads.core" : "file:../com.baza.ads.core"
+    "com.baza.ads.core" : "com.baza.ads.core"
   },
   "author": {
     "name": "BazaGames",
