--- a/Packages/com.baza.ads.appodeal/Runtime/Baza.Ads.Appodeal.asmdef
+++ b/Packages/com.baza.ads.appodeal/Runtime/Baza.Ads.Appodeal.asmdef
@@ -1,7 +1,8 @@
 {
-    "name": "Baza.Ads.Core",
+    "name": "Baza.Ads.Applovin",
     "rootNamespace": "",
     "references": [
+        "Baza.Ads.Core",
         "UniTask"
     ],
     "includePlatforms": [],
